--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    z-index: 999;
+    z-index: 20;
     width: 100%;
     height: 10vh;
     background-color: var(--color3);
